source/grammar/tests/invalid/statements/io.qasm
input int[8];
output int[8];
input qreg myvar[4];
output qreg myvar[4];
input int[8] myvar = 32;
output int[8] myvar = 32;
input myvar;
output myvar;
